# src/app/api/openapi/route.ts
@@ -5,7 +5,7 @@ import openApiSpec from '@/lib/openapi.json';
 export async function GET(request: NextRequest) {
   // Dynamically set the server URL based on the request origin or environment variable
   const apiBaseUrl = process.env.NEXT_PUBLIC_API_BASE_URL;
-  const origin = request.headers.get('origin') || request.headers.get('host') || 'http://localhost:3040';
+  const origin = request.headers.get('origin') || request.headers.get('host') || 'http://localhost:14580';
   const serverUrl = apiBaseUrl || (origin.startsWith('http') ? origin : `http://${origin}`);
 
   // Clone the spec and update the servers array
